2001-10-27  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: change the search to start anew if no more
	strings are found. Fix bug #63132

2001-10-26  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: small string change

	* release 0.99.0

2001-10-25  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: make default to not show app names since I think
	it's probably strange to the user considering the desktop
	files are delay loaded and changing the name looks funny when
	sorting the tree by name

	* interface.c: make the cancel button work in the simple
	dialog

2001-10-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Pass the kill signal to the root password dialog
	so the proper action is taken as root. Also many minor cosmetic
	improvements.

	* procactions.c: pass the kill signal

2001-10-25  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c, memmaps.c: clashes in comman variables causeing
	garbage in the e-trees. Declare global variables as static.
	Fixes bug #59555.

2001-10-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add the Ximian gtop icon as default window
	icon

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	* procactions.c: fix the crash. The tree was being updated
	while going through the selected processes and if one was
	removed from the e-tree then e-tree would crash. Ugly hack
	just removing the update timeout while doing the foreach
	function

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	* procactions.c: add support for renicing multiple processes

2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	Add ability to select multiple processes and do the corresponding
	actions on all selected processes. Crashes when killing multiple
	processes and one needs the root dialog though and no renice
	support yet.

	* proctble.etspec: change selection mode to "browse"

	* favorites.c: hide all selected processes. Also update the
	tree when a blacklisted processes is readded for good
	feedback
	