@@ -1,3 +1,13 @@
+2001-11-03  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.[c,h]: add new config variables to save the disk
+	clist widths
+
+	* interface.c: set the widths. Also change disks to devices 
+	since that is more proper
+
+	* procdialogs.c: again change disks to devices in prefs dialog
+
 2001-10-27  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: change the search to start anew if no more
